# cpp-file-compressor

file_comp/: CMakeLists.txt
file_comp/comp_algo/aiff_/: aiff_comp.cpp  aiff_comp.h
file_comp/comp_algo/bmp_/: bmp_comp.cpp  bmp_comp.h
file_comp/comp_algo/csv_/: csv_comp.cpp  csv_comp.h
file_comp/comp_algo/flac_/: flac_comp.cpp  flac_comp.h
file_comp/comp_algo/iso_/: iso_comp.cpp  iso_comp.h
file_comp/comp_algo/jpg_/: jpg_comp.cpp  jpg_comp.h
file_comp/comp_algo/log_/: log_comp.cpp  log_comp.h
file_comp/comp_algo/png_/: png_comp.cpp  png_comp.h
file_comp/comp_algo/psd_/: psd_comp.cpp  psd_comp.h
file_comp/comp_algo/tar_/: tar_comp.cpp  tar_comp.h
file_comp/comp_algo/tiff_/: tiff_comp.cpp  tiff_comp.h
file_comp/comp_algo/txt_/: txt_comp.cpp  txt_comp.h
file_comp/comp_algo/vhd_/: vhd_comp.cpp  vhd_comp.h
file_comp/comp_algo/wav_/: wav_comp.cpp  wav_comp.h
file_comp/hdr/: common.h  file_comp.h
file_comp/src/: file_comp.cpp  main.cpp
